remove release notes for app store debut

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -39,8 +39,6 @@ gallery:
   - 3.jpg
 path: ""
 defaultPassword: ""
-releaseNotes: >-
-  This release includes new features, various bug fixes and performance improvements, as well as updated translations. 
-  Read the full release notes at https://github.com/bitcoinknots/bitcoin/blob/v25.1.knots20231115/doc/release-notes.md
+releaseNotes: ""
 submitter: Léo Haf
 submission: https://github.com/getumbrel/umbrel-apps/pull/953
