add app description

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -5,28 +5,11 @@ name: Bitcoin Knots
 version: "25.1"
 tagline: Run your personal node powered by Bitcoin Knots
 description: >-
-  Bitcoin Knots will be compatible with all apps that need Bitcoin Core in a future umbrel update.
+  Take control of your digital sovereignty by running a Bitcoin node that aligns with your needs and preferences. 
+  Independently store and validate every single Bitcoin transaction with Bitcoin Knots.
   
-
-  Run your Bitcoin node and independently store and validate
-  every single Bitcoin transaction with it. Achieve unparalleled
-  privacy by connecting your wallet directly to your node to
-  ensure that your wallet company can’t spy on your transactions,
-  or worse — lie to you.
-
-
-  Plus, transacting with your own node also helps keep the entire
-  Bitcoin network decentralized; win-win!
-
-
-  With over 20 advanced settings, you can take control of your node
-  and customize it to your needs. Control how your node connects to
-  other nodes over Tor, clearnet, and I2P, adjust your daily upload
-  limit, set the maximum mempool size, fine-tune its performance,
-  and much more.
-
-
-  Don't trust. Verify. On steroids.
+  📣 Bitcoin Knots does not yet automatically integrate with other apps in the Bitcoin ecosystem on Umbrel.
+  However, in a future umbrelOS update, users will be able to choose which Bitcoin Node app they want to use to connect with other apps.
 developer: Luke Dashjr
 website: https://bitcoinknots.org
 dependencies: []
