--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -8,9 +8,12 @@ description: >-
   Take control of your digital sovereignty by running a Bitcoin node that aligns with your needs and preferences. 
   Independently store and validate every single Bitcoin transaction with Bitcoin Knots.
   
-  
+
   ⚠️ Bitcoin Knots does not yet automatically integrate with other apps in the Bitcoin ecosystem on Umbrel.
   However, in a future umbrelOS update, users will be able to choose which Bitcoin Node app they want to use to connect with other apps.
+
+
+  Powered by Bitcoin Knots: https://bitcoinknots.org/
 developer: Luke Dashjr
 website: https://bitcoinknots.org
 dependencies: []
