change developer to Leo Haf

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
 
 
   Powered by Bitcoin Knots: https://bitcoinknots.org/
-developer: Luke Dashjr
+developer: Léo Haf
 website: https://bitcoinknots.org
 dependencies: []
 repo: https://github.com/bitcoinknots/bitcoin.git
