fix capitalization in Bitcoin Knots description

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -10,7 +10,7 @@ description: >-
   
 
   ⚠️ Bitcoin Knots does not yet automatically integrate with other apps in the Bitcoin ecosystem on Umbrel.
-  However, in a future umbrelOS update, users will be able to choose which Bitcoin Node app they want to use to connect with other apps.
+  However, in a future umbrelOS update, users will be able to choose which Bitcoin node app they want to use to connect with other apps.
 
 
   Powered by Bitcoin Knots: https://bitcoinknots.org/
