additional release notes formatting

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -46,7 +46,7 @@ releaseNotes: >-
   ship cannot be downgraded after upgrading to vere-v3.0.
   
 
-  Epoch System
+  Epoch System:
   
 
   The epoch system cuts the previously uniform event log into “epochs”
@@ -77,7 +77,7 @@ releaseNotes: >-
   time the vere runtime version changes. A user may also manually create a
   new epoch by using the urbit roll command.
   
-  
+
   The urbit chop command now deletes all epochs except for the last two.
 
 
