tweak release notes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,19 +28,15 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.56.1 to v1.62.0 which includes: 
-  
+  This release updates Tailscale from v1.56.1 to v1.62.1, and includes: 
 
-  - Web interface now uses ACL grants to manage access on tagged devices
+  - Web Interface Access Control: Enhanced security with Access Control Lists (ACLs) for managing permissions on tagged devices.
 
-  - Tailscale SSH connections now disable unnecessary hostname canonicalization
+  - DNS Options Expanded: Added Mullvad's family-friendly server to the list of well known DNS over HTTPS (DoH) servers.
 
-  - Exposing port 8080 to other devices on your tailnet works as expected
+  - Request Handling: DNS over HTTP requests now come with a set timeout.
 
-  - Rresent users with a valid login page when attempting to login even after leaving device unattended for several days
-
-  - and many more improvements/fixes..
-
+  - and more!
 
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
