additional release notes tweaks

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -30,11 +30,11 @@ torOnly: false
 releaseNotes: |
   This release updates Tailscale from v1.56.1 to v1.62.1, and includes: 
 
-  - Web Interface Access Control: Enhanced security with Access Control Lists (ACLs) for managing permissions on tagged devices.
+  - Enhanced Access Control: Enhanced security with Access Control Lists (ACLs) for managing permissions on tagged devices.
 
-  - DNS Options Expanded: Added Mullvad's family-friendly server to the list of well known DNS over HTTPS (DoH) servers.
+  - Expanded DNS Options: Added Mullvad's family-friendly server to the list of well known DNS over HTTPS (DoH) servers.
 
-  - Request Handling: DNS over HTTP requests now come with a set timeout.
+  - Improved Request Handling: DNS over HTTP requests now come with a set timeout.
 
   - and more!
 
