--- a/chatbot-ui/umbrel-app.yml
+++ b/chatbot-ui/umbrel-app.yml
@@ -11,7 +11,7 @@ description: >-
   Simply add your API keys and start chatting!
 
 
-  This version of ChatBot UI supports 80+ AI models, from OpenAI, Google, Anthropic, and more! Conversations are stored locally within your browser.
+  This version of ChatBot UI supports 80+ AI models from OpenAI, Google, Anthropic, and more! Conversations are stored locally within your browser.
   You can export and import conversations to safeguard against data loss.
 developer: Mckay Wrigley
 website: https://github.com/mckaywrigley/chatbot-ui
