add release notes

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -26,6 +26,7 @@ gallery:
   - 3.jpg
 path: ""
 defaultPassword: ""
-releaseNotes: ""
+releaseNotes: >-
+  This release updates Bitcoin Knots to version 26.1. Full release notes can be found at https://github.com/bitcoinknots/bitcoin/blob/v26.1.knots20240325/doc/release-notes.md
 submitter: Léo Haf
 submission: https://github.com/getumbrel/umbrel-apps/pull/953
