Update Bitcoin Knots to v26.1 (#1027)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: bitcoin-knots
 category: bitcoin
 name: Bitcoin Knots
-version: "25.1"
+version: "26.1"
 tagline: Run your personal node powered by Bitcoin Knots
 description: >-
   Take control of your digital sovereignty by running a Bitcoin node that aligns with your needs and preferences. 
@@ -26,6 +26,10 @@ gallery:
   - 3.jpg
 path: ""
 defaultPassword: ""
-releaseNotes: ""
+releaseNotes: >-
+  This release updates Bitcoin Knots to version 26.1.
+  
+  
+  Full release notes can be found at https://github.com/bitcoinknots/bitcoin/blob/v26.1.knots20240325/doc/release-notes.md
 submitter: Léo Haf
 submission: https://github.com/getumbrel/umbrel-apps/pull/953
