--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -17,17 +17,10 @@ description: >-
 
   - Your RTSP password (if needed) is the "default app password" that is displayed on Frigate's page in the app store (shown after install).
 releaseNotes: >-
-  This update takes Frigate from 0.12.1 to 0.13.2 and includes the following changes:
+  This update takes Frigate from 0.12.1 to 0.13.2.
 
-  
-  - Add detailed errors for unsupported label uploading to frigate+
 
-  - Fix birdseye camera comparison
-
-  - Increase hash map size and much more...
-
-  
-  Full release notes are available at https://github.com/blakeblackshear/frigate/releases/tag/v0.13.2.
+  Full release notes are available at https://github.com/blakeblackshear/frigate/releases
 developer:  Blake Blackshear
 website: https://frigate.video/
 repo: https://github.com/blakeblackshear/frigate
