--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -43,7 +43,16 @@ description: >-
 
   🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https. You can set up https using the Cloudflare Tunnel app available in the app store.
   Detailed instructions for configuring the tunnel can be found here: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
-releaseNotes: ""
+releaseNotes: >-
+  This update of Databag brings the following changes:
+
+
+  - Dark mode
+
+  - New language support
+
+  - Instructions for account creation
+
 dependencies: []
 developer: Pierre Balzack
 website: https://github.com/balzack/databag
