--- a/monero/umbrel-app.yml
+++ b/monero/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: monero
 category: finance
 name: Monero Node
-version: "0.18.3.1"
+version: "0.18.3.3"
 tagline: Run a monero node
 description: >-
   Run your monero node and independently store and validate every single Monero transaction with it.
@@ -14,7 +14,7 @@ dependencies: []
 repo: https://github.com/deverickapollo/umbrel-monero
 support: https://github.com/deverickapollo/umbrel-monero/issues
 port: 9976
-submitter: Deverick
+submitter: deverickapollo
 submission: https://github.com/getumbrel/umbrel-apps/pull/690
 gallery: 
   - 1.jpg 
