--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 9976
 
   server:
-    image: deverickapollo/umbrel-monero:v1.0.4@sha256:6722d69337bb1a0919a33fd40c5a30d342fe6feb04c1e6ffde70a819cb01be15
+    image: deverickapollo/umbrel-monero:v1.0.6@sha256:d4486bedd4fcbb10bc0a0025d0a9a2f411fd18c57434aa711c20768a46689f9c
     depends_on: [monerod]
     restart: on-failure
     expose:
@@ -43,7 +43,7 @@ services:
     restart: unless-stopped
     stop_grace_period: 15m
     command: "${APP_MONERO_COMMAND}"
-    image: sethsimmons/simple-monerod:v0.18.3.1@sha256:26492ad584d1022c62efe3529574264fc0a30107e797d23686c42c4c62eea093
+    image: ghcr.io/sethforprivacy/simple-monerod:v0.18.3.3@sha256:4e07ca4119cd34d61684c44151296535cb9ba674e081d0a622432be4ac51c2c9
     ports:
       - "${APP_MONERO_P2P_PORT}:${APP_MONERO_P2P_PORT}"
       - "${APP_MONERO_RPC_PORT}:${APP_MONERO_RPC_PORT}"
