--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: uptime-kuma
 category: networking
 name: Uptime Kuma
-version: "1.23.7"
+version: "1.23.11"
 tagline: Self-hosted uptime monitoring tool
 description: >
   Uptime Kuma is a self-hosted monitoring tool like Uptime Robot.
@@ -43,32 +43,20 @@ releaseNotes: >
   If you are using some unofficial/3rd party tools, you may need to re-generate an auth token.
   
 
-  This release updates Uptime Kuma from version 1.23.3 to 1.23.7.
+  This release updates Uptime Kuma of version 1.23.11
 
 
   💇‍♀️ Improvements:
   
-  - Show the original timeout message again and +10 seconds for abort signal
-  
-  - Improved error message on abort signal timeout (Thanks @chakflying)
-
+  - Update dependencies
 
   🐛 Bug Fixes:
 
-  - Fixed a memory leak issue. Close the client postgresql connection after rejection. (Thanks @mvaled)
+  - Fix: origin undefined on error handling (Thanks @chakflying)
 
-  - Reverted "Restart running monitors if no heartbeat", which causes some issues from 1.23.4 to 1.23.6.
-
-
-  ⬆️ Security Fixes
-
-  - An XSS issue in the "Google Analytics ID" text field (Reported by @gtg2619) (Read more: GHSA-v4v2-8h88-65qj)
-
-  - Rewrite Tailscale ping using spawnSync (Reported by @vaadata-pascala) (Read more: GHSA-v4v2-8h88-65qj)
-
-  - getGameList, testChrome are no longer accessible without login
+  - [Non-docker] Fixed the Tailscale monitor issue which was broken in 1.23.8
   
 
-  Full changelog for versions 1.23.3 to 1.23.7 can be found here: https://github.com/louislam/uptime-kuma/releases
+  Full changelog for versions 1.23.7 to 1.23.11 can be found here: https://github.com/louislam/uptime-kuma/releases
 submitter: Philipp Haussleiter
 submission: https://github.com/getumbrel/umbrel/pull/1148
