--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -8,12 +8,22 @@ services:
       PROXY_AUTH_ADD: "false"
 
   ord:
-    image: nmfretz/ord:v0.17.1@sha256:805913e44217e539a42d1716b72d746ddbd50b7676d80c02c4d8e1e75a0d3ba9
+    image: nmfretz/ord:v0.17.1@sha256:ee391d9152c0ac6f0f6909c19fc14e747af72abf9813d6a79b22d6f4a55ef29c
     # This needs to run as root
     # user: "1000:1000"
     restart: on-failure
-    # First-inscription-height may not be needed in the future
-    command: "--first-inscription-height 767430 --index-runes --data-dir /var/lib/ord --bitcoin-data-dir /var/lib/bitcoind --bitcoin-rpc-url ${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT} --chain ${APP_BITCOIN_NETWORK} server --http"
+    command: "ord server --http"
     volumes:
       - ${APP_DATA_DIR}/data/ord:/var/lib/ord
       - ${APP_BITCOIN_DATA_DIR}:/var/lib/bitcoind:ro
+    environment:
+      ORD_DATA_DIR: "/var/lib/ord"
+      ORD_BITCOIN_DATA_DIR: "/var/lib/bitcoind"
+      ORD_COOKIE_FILE: "/var/lib/bitcoind/.cookie"
+      ORD_BITCOIN_RPC_USERNAME: "${APP_BITCOIN_RPC_USER}"
+      ORD_BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
+      ORD_BITCOIN_RPC_URL: "${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT}"
+      ORD_CHAIN: "${APP_BITCOIN_NETWORK}"
+      # First-inscription-height may not be needed in the future
+      ORD_FIRST_INSCRIPTION_HEIGHT: "767430"
+      ORD_INDEX_RUNES: "true"
