tweak release notes

--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -11,13 +11,19 @@ description: >
   Simply install the app and wait for Ordinals to connect to your Bitcoin node and index inscriptions.
 
 
+  This app also includes the ord command-line tool for advanced users.
+
+
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: >-
-  🚨 This update requires a full re-indexing of the ord database to prepare for upcoming runes.
+  🚨 This update requires a full re-indexing of the ord database to prepare for upcoming runes!
   This is handled for you automatically by Umbrel when you update the app. 
 
 
-  This release updates Ord from version 0.15.0 to 0.17.1. Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
+  Advanced users: running ord commands via the Terminal has now been simplified. From inside the ord container, simply type the command you want to run as listed in the ord help menu. For example, to create a wallet, run `ord wallet create`.
+
+
+  Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
 dependencies:
