--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       ORD_BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
       ORD_BITCOIN_RPC_URL: "${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT}"
       ORD_CHAIN: "${APP_BITCOIN_NETWORK}"
-      # First-inscription-height may not be needed in the future
+      # First-inscription-height may not be needed in the future. It would be nice to remove it so that other chains like testnet are not impacted.
       ORD_FIRST_INSCRIPTION_HEIGHT: "767430"
       ORD_INDEX_RUNES: "true"
+      # TODO: consider index-sats
