--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -2,22 +2,29 @@ manifestVersion: 1
 id: ordinals
 category: bitcoin
 name: Ordinals
-version: "0.15.0"
-tagline: Trustlessly view Ordinal inscriptions using your Bitcoin node.
+version: "0.17.1"
+tagline: Run your own index, block explorer, and command-line wallet for Ordinals
 description: >
-  A block explorer to trustlessly view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
+  Run your own index, block explorer, and command-line wallet for Ordinals. The app automatically connects to your Bitcoin node on umbrelOS for trustless operation. Simply install the app and wait for Ordinals to index inscriptions and runes.
+  
+
+  Use the block explorer to view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
 
 
-  Simply install the app and wait for Ordinals to connect to your Bitcoin node and index inscriptions.
+  Advanced users can use the command-line to create wallets, create and manage inscriptions, and more. A future umbrelOS update will allow you to run commands from a Terminal directly within the umbrelOS interface!
 
 
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: >-
-  🚨 This update requires a full re-indexing of the ord database due to a significant new release of ord that alters the database schema.
+  🚨 This update requires a full re-indexing of the ord database to prepare for upcoming runes!
   This is handled for you automatically by Umbrel when you update the app. 
 
 
-  This release updates Ord from version 0.5.1 to 0.15.0. Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
+  Advanced users: running ord commands via the Terminal has now been simplified. From inside the ord container, simply type the command you want to run as listed in the ord help menu. For example, to create a wallet, run `ord wallet create`.
+  An upcoming umbrelOS update will allow you to run commands from a Terminal right from the umbrelOS interface.
+
+
+  Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
 dependencies:
