Now using docker volumes in libretranslate because of permission issues (there is no unique data, so it's fine)

--- a/libretranslate/docker-compose.yml
+++ b/libretranslate/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       - LT_UPDATE_MODELS=true
     ##  - LT_LOAD_ONLY=en,fr
     volumes:
-      - ${APP_DATA_DIR}/api_keys:/app/db
-      - ${APP_DATA_DIR}/models:/home/libretranslate/.local:rw
+      - libretranslate_api_keys:/app/db
+      ## Using $APP_DATA_DIR causes permission errors
+      - libretranslate_models:/home/libretranslate/.local:rw
 
+volumes:
+  libretranslate_models:
+  libretranslate_api_keys:
