--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -1,29 +1,28 @@
 manifestVersion: 1
 id: libretranslate
-category: finance
+category: ai
 name: Libretranslate
 version: "1.5.6"
 tagline: Simple, database-free blockchain explorer
 description: >-
-  BTC RPC Explorer is a full-featured, self-hosted explorer for the
-  Bitcoin blockchain. With this explorer, you can explore not just the
-  blockchain database, but also explore the functional capabilities of your
-  Umbrel.
-
-  It comes with a network summary dashboard, detailed view of blocks, transactions, addresses, along with analysis tools for viewing stats on miner activity, mempool summary, with fee, size, and age breakdowns. You can also search by transaction ID, block hash/height, and addresses.
-
-  It's time to appreciate the "fullness" of your node.
+  Free and Open Source Machine Translation API, entirely self-hosted.
+Unlike other APIs, it doesn't rely on proprietary providers such as Google or Azure to perform translations.
+  Instead, its translation engine is powered by the open source Argos Translate library.
 releaseNotes: >-
-  Dark mode is finally here! Easily switch between your preferred mode
-  in one click.
+  What's Changed:
+  ltmanage in bin by @jmlord in #580
+  Add --req-time-cost by @pierotofy in #584
+  Improve model contributing doc by @argosopentech in #585
+  Added TypeScript language binding library. by @tderflinger in #590
+  Specify the supported color schemes by @Phoenix616 in #593
+  add: R binding by @myanesp in #594
+  fix: make libretranslate works with ipv6 by @cyrinux in #596
 
-  This version also includes lots of minor styling improvements, better
-  error handling, and several bugfixes.
-developer: Dan Janosik
-website: https://explorer.btc21.org
+developer: Piero Toffanin and Seth Falco
+website: https://libretranslate.com
 dependencies:
-repo: https://github.com/janoside/btc-rpc-explorer
-support: https://github.com/janoside/btc-rpc-explorer/discussions
+repo: https://github.com/LibreTranslate/LibreTranslate
+support: https://github.com/LibreTranslate/LibreTranslate/discussions
 port: 7017
 gallery:
   - 1.jpg
@@ -32,5 +31,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel/pull/334
+submitter: highghlow
+submission: https://github.com/getumbrel/umbrel/pull/TODO
