Fixed formatting in umbrel-app.yml

--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -9,14 +9,14 @@ description: >-
 Unlike other APIs, it doesn't rely on proprietary providers such as Google or Azure to perform translations.
   Instead, its translation engine is powered by the open source Argos Translate library.
 releaseNotes: >-
-  What's Changed:
+  What's Changed\:
   ltmanage in bin by @jmlord in #580
   Add --req-time-cost by @pierotofy in #584
   Improve model contributing doc by @argosopentech in #585
   Added TypeScript language binding library. by @tderflinger in #590
   Specify the supported color schemes by @Phoenix616 in #593
-  add: R binding by @myanesp in #594
-  fix: make libretranslate works with ipv6 by @cyrinux in #596
+  add\: R binding by @myanesp in #594
+  fix\: make libretranslate works with ipv6 by @cyrinux in #596
 
 developer: Piero Toffanin and Seth Falco
 website: https://libretranslate.com
