Removed memos digest

--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       APP_PORT: 5230
 
   main:
-    image: neosmemo/memos:0.21@sha256:c828c4a2044c
+    image: neosmemo/memos:0.21
     restart: on-failure
     stop_grace_period: 1m
     volumes:
