Add FlareSolverr to Prowlarr

--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -36,3 +36,7 @@ services:
       SONARR_CONFIG_XML: "${APP_PROWLARR_SONARR_CONFIG_XML}"
       READARR_URL: "http://readarr_server_1:8787"
       READARR_CONFIG_XML: "${APP_PROWLARR_READARR_CONFIG_XML}"
+
+  proxy:
+    image: flaresolverr/flaresolverr:v3.3.17@sha256:5f5661db1e69a6f80ac24d47d9fa5580f6f741ee5ec967818396ae0dacecd7ea
+    restart: on-failure
