Whitelist /api in proxy auth

--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       # Note that the '_1' at the end is needed
       APP_HOST: memos_main_1
       APP_PORT: 5230
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   main:
     image: neosmemo/memos:0.21
