feat(gladys): Fix Gladys Assistant

--- a/gladys-assistant/umbrel-app.yml
+++ b/gladys-assistant/umbrel-app.yml
@@ -11,9 +11,15 @@ developer: Pierre-Gilles Leymarie
 website: https://gladysassistant.com/
 repo: https://github.com/GladysAssistant/Gladys
 support: https://en-community.gladysassistant.com
-port: 80
+dependencies: []
+port: 5081
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: ""
 submitter: Cyril Beslay
 submission: https://github.com/getumbrel/umbrel/pull/1042
