Update ordinals to 0.18.1

--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   ord:
-    image: nmfretz/ord:v0.17.1@sha256:ee391d9152c0ac6f0f6909c19fc14e747af72abf9813d6a79b22d6f4a55ef29c
+    image: mayankchhabra/ord:0.18.1@sha256:9cc88552cca2b59ed6417790ec1b43f4dbfaf0c9ea3fdf79bf055dcd6dcb60b8
     # This needs to run as root
     # user: "1000:1000"
     restart: on-failure
