--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -2,11 +2,11 @@ manifestVersion: 1
 id: ordinals
 category: bitcoin
 name: Ordinals
-version: "0.17.1"
+version: "0.18.1"
 tagline: Run your own index, block explorer, and command-line wallet for Ordinals
 description: >
   Run your own index, block explorer, and command-line wallet for Ordinals. The app automatically connects to your Bitcoin node on umbrelOS for trustless operation. Simply install the app and wait for Ordinals to index inscriptions and runes.
-  
+
 
   Use the block explorer to view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
 
@@ -16,15 +16,10 @@ description: >
 
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: >-
-  🚨 This update requires a full re-indexing of the ord database to prepare for upcoming runes!
-  This is handled for you automatically by Umbrel when you update the app. 
+  🚨 This update will automatically perform a full re-index of the ord database to prepare for upcoming runes.
 
 
-  Advanced users: running ord commands via the Terminal has now been simplified. From inside the ord container, simply type the command you want to run as listed in the ord help menu. For example, to create a wallet, run `ord wallet create`.
-  An upcoming umbrelOS update will allow you to run commands from a Terminal right from the umbrelOS interface.
-
-
-  Full release notes for Ord can be found at: https://github.com/ordinals/ord/releases
+  Ord 0.18.1 brings several crucial bug fixes and improvements related to runes. Full release notes can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
 dependencies:
