--- a/technitium-dns/docker-compose.yml
+++ b/technitium-dns/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: technitium-dns_dns-server_1
       APP_PORT: 5380
   dns-server:
-    image: technitium/dns-server:latest
+    image: technitium/dns-server:12.1
 
     ports:
       # (proxied) - "5380:5380/tcp" #DNS web console (HTTP)
