--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -1,41 +1,23 @@
 manifestVersion: 1
 id: technitium-dns
-category: bitcoin
-name: BTC RPC Explorer
-version: "3.4.0"
-tagline: Simple, database-free blockchain explorer
+category: networking
+name: Technitium DNS server
+version: "12.1"
+tagline: Block ads & malware at DNS level for your entire network!
 description: >-
-  BTC RPC Explorer is a full-featured, self-hosted explorer for the
-  Bitcoin blockchain. With this explorer, you can explore not just the
-  blockchain database, but also explore the functional capabilities of your
-  Umbrel.
-
-
-  It comes with a network summary dashboard, detailed view of blocks, transactions, addresses, along with analysis tools for viewing stats on miner activity, mempool summary, with fee, size, and age breakdowns. You can also search by transaction ID, block hash/height, and addresses.
-
-
-  It's time to appreciate the "fullness" of your node.
+  Technitium DNS Server is an open source authoritative as well as recursive DNS server that can be used for self hosting a DNS server for privacy & security. It works out-of-the-box with no or minimal configuration and provides a user friendly web console accessible using any modern web browser.
 releaseNotes: >-
-  This update brings several changes to BTC RPC Explorer, including:
+   This is a major release that now runs on ASP.NET Core 8 Runtime and adds many new features and options. This release also adds two new DNS apps. The DNS Rebinding Protection app protects your networks from DNS rebinding attacks. The NX Domain Override app allows you to override NX domain response with custom A/AAAA answer response.
 
-  - Several new API actions/changes (some breaking)
+  The release also adds Newly Registered Domains Community Feed by Shreshta. You can read more on Newly Registered Domains to understand how it protects you better.
 
-  - Homepage additions such as a "Next Halving" widget.
-
-  - New curated list of Bitcoin "Holidays"
-
-  - Refreshed "Dark" theme with blues toned down (legacy dark theme still available)
-
-  - and more!
-
-
-  Full release notes are available at https://github.com/janoside/btc-rpc-explorer/releases/tag/v3.4.0
-developer: Dan Janosik
-website: https://bitcoinexplorer.org/
+  Read the change log (https://github.com/TechnitiumSoftware/DnsServer/blob/master/CHANGELOG.md) to know full details about this latest update. 
+developer: Shreyas Zare
+website: https://technitium.com/dns/
 dependencies:
-repo: https://github.com/janoside/btc-rpc-explorer
-support: https://github.com/janoside/btc-rpc-explorer/discussions
-port: 3002
+repo: https://github.com/TechnitiumSoftware/DnsServer
+support: https://github.com/TechnitiumSoftware/DnsServer/discussions
+port: 5380
 gallery:
   - 1.jpg
   - 2.jpg
@@ -43,5 +25,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel/pull/334
+submitter: highghlow
+submission: https://github.com/getumbrel/umbrel/pull/TODO
