Removed docker-compose.env

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ${APP_DATA_DIR}/media:/usr/src/paperless/media
       - ${APP_DATA_DIR}/export:/usr/src/paperless/export
       - ${APP_DATA_DIR}/consume:/usr/src/paperless/consume
-    env_file: docker-compose.env
+    # env_file: docker-compose.env # NOPE, can't load files
     environment:
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_TIKA_ENABLED: 1
