--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: snapdrop_server_1
+      APP_HOST: paperless_webserver_1
       APP_PORT: 8000
 
   broker:
