--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -1,35 +1,29 @@
 manifestVersion: 1
 id: paperless
 category: files
-name: Snapdrop
-version: "f769a766"
-tagline: Opensource Airdrop Alternative
+name: Paperless-ngx
+version: "2.7.2"
+tagline: Organize and index your scanned documents with tags, correspondents, types, and more.
 description: >-
-  Snapdrop - local file sharing in your browser. Inspired by Apple's Airdrop.
+  Paperless-ngx is a community-supported open-source document management system that transforms your physical documents into a searchable online archive so you can keep, well, less paper.
+releaseNotes: >-
+  Fix\: select dropdown background colors not visible in light mode @shamoon (#6323)
+  Fix\: spacing in reset and incorrect display in saved views @shamoon (#6324)
+  Fix\: disable invalid create endpoints @shamoon (#6320)
+  Fix\: dont initialize page numbers, allow split with browser pdf viewer @shamoon (#6314)
 
-
-
-  Snapdrop is built with the following awesome technologies:
-  
-  - Vanilla HTML5 / ES6 / CSS3 frontend
-
-  - WebRTC / WebSockets
-
-  - NodeJS backend
-
-  - Progressive Web App (PWA)
-developer: RobinLinus
-website: https://snapdrop.net/
+developer: Paperless-ngx Community
+website: https://docs.paperless-ngx.com/
 dependencies: []
-repo: https://github.com/RobinLinus/snapdrop
-support: https://github.com/RobinLinus/snapdrop/blob/master/docs/faq.md
-port: 8222
+repo: https://github.com/paperless-ngx/paperless-ngx
+support: https://github.com/paperless-ngx/paperless-ngx/discussions
+port: 2349
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
-submitter: Pranshu Agrawal
-submission: https://github.com/getumbrel/umbrel-apps/pull/290
+defaultUsername: "paperless"
+defaultPassword: "paperless"
+submitter: highghlow
+submission: https://github.com/getumbrel/umbrel-apps/pull/TODO
