--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       APP_HOST: jackett_server_1
       APP_PORT: 9117
-      PROXY_AUTH_WHITELIST: "/api/*"
+      PROXY_AUTH_WHITELIST: "/api/* /dl/*"
 
   server:
     image: linuxserver/jackett:0.21.2163@sha256:d1d5afd50a2ac0084e49eb57be551179281e965df2d9efc07a7b110d97c29d6a
