--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.12.5"
+version: "1.13.1"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,15 +34,19 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This update brings BTCPay Server to version 1.12.5, and includes various bug fixes, and improvements.
+  This update brings BTCPay Server to version 1.13.1, and includes various bug fixes, and improvements.
 
+  - CSV exports from the Reports were exporting dates in 12-hour format instead of 24-hour format. (#5915, #5922) @TChukwuleta
 
-  - Improved checkout page load time by fetching the recommended fee in the background periodically
+  - Crash when configuring BTCPay Server with a non-default Postgres schema (Fix #5901) @NicolasDorier
 
-  - Improved fee rate approximation by linear interpolation between known block targets
+  - A payment request with an amount of 0 no longer causes the payment request's page to crash (#5926) @Kukks
 
-  - Hide LN Balance when using an internal node and not a server admin
+  - Prevent unintentional double payouts (#5931, #5913) @dennisreimann
 
+  - The buyerEmail field in a Payment Request's form will now set the email for the payment request (#5926) @Kukks
+
+  - Added Tether as a supporter to the BTCPay Server Foundation (#5891) @rockstardev
 
   Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
