--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -3,7 +3,7 @@ id: libretranslate
 category: ai
 name: Libretranslate
 version: "1.5.6"
-tagline: Free and Open Sourcemachine translation API
+tagline: Simple, database-free blockchain explorer
 description: >-
   Free and Open Source Machine Translation API, entirely self-hosted.
   Unlike other APIs, it doesn't rely on proprietary providers such as Google or Azure to perform translations.
