--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: qbittorrent
 category: networking
 name: qBittorrent
-version: "4.6.2"
+version: "4.6.4"
 tagline: Free and reliable P2P Bittorrent client
 description: >-
   qBittorrent is an open-source software alternative to µTorrent. It's designed to meet the needs of most users while using as little CPU and memory as possible.
@@ -14,10 +14,10 @@ description: >-
 
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
 releaseNotes: >-
-  This release updates qBittorrent from version 4.6.0 to 4.6.2. 
+  This release updates qBittorrent from version 4.6.0 to 4.6.4. 
   
   
-  Read the full release notes at https://www.qbittorrent.org/news#mon-nov-27th-2023---qbittorrent-v4.6.2-release
+  Read the full release notes at https://www.qbittorrent.org/news#sun-mar-24th-2024---qbittorrent-v4.6.4-and-v5.0.0beta1-releases
 developer: qBittorrent
 website: https://qbittorrent.org/
 dependencies: []
