--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -25,6 +25,6 @@ services:
       ORD_BITCOIN_RPC_URL: "${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT}"
       ORD_CHAIN: "${APP_BITCOIN_NETWORK}"
       # First-inscription-height may not be needed in the future. It would be nice to remove it so that other chains like testnet are not impacted.
-      ORD_FIRST_INSCRIPTION_HEIGHT: "767430"
+      # ORD_FIRST_INSCRIPTION_HEIGHT: "767430"
       ORD_INDEX_RUNES: "true"
       # TODO: consider index-sats
