--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ordinals
 category: bitcoin
 name: Ordinals
-version: "0.18.1"
+version: "0.18.2"
 tagline: Run your own index, block explorer, and command-line wallet for Ordinals
 description: >
   Run your own index, block explorer, and command-line wallet for Ordinals. The app automatically connects to your Bitcoin node on umbrelOS for trustless operation. Simply install the app and wait for Ordinals to index inscriptions and runes.
@@ -16,10 +16,11 @@ description: >
 
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: >-
-  🚨 This update will automatically perform a full re-index of the ord database to prepare for upcoming runes.
+  🚨 This update will automatically migrate existing wallet databases to the new ord 0.18.2 file structure. Simply update the app and you are done!
 
 
-  Ord 0.18.1 brings several crucial bug fixes and improvements related to runes. Full release notes can be found at: https://github.com/ordinals/ord/releases
+  Ord 0.18.2 Wallet databases are now stored in the /wallets subdirectory of the ord data directory. This update also includes other minor enhancements and bug fixes.
+  Full release notes can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
 dependencies:
