Rename DEFAULT_CONFIG env var to CONFIG

--- a/just-download/docker-compose.yml
+++ b/just-download/docker-compose.yml
@@ -14,4 +14,4 @@ services:
       - ${APP_DATA_DIR}:/config
     environment:
       CONFIG_LOCATION: /config/config.json
-      DEFAULT_CONFIG: '{"indexers": [], "transmission": {"host": "transmission_server_1", "port": 9091}}'
+      CONFIG: '{"indexers": [], "transmission": {"host": "transmission_server_1", "port": 9091}}'
