add stop grace period to ord container to mitigate index redb corruption

--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     # This needs to run as root
     # user: "1000:1000"
     restart: on-failure
+    stop_grace_period: 15m30s
     command: "ord server --http"
     volumes:
       - ${APP_DATA_DIR}/data/ord:/var/lib/ord
