tweak release notes

--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -16,10 +16,12 @@ description: >
 
   Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: >-
-  🚨 This update will automatically migrate existing wallet databases to the new ord 0.18.2 file structure. Simply update the app and you are done!
+  🚨 This update will automatically migrate existing wallet databases to the new ord 0.18.2 file structure. Simply update the app, and the rest is taken care of — no manual migration required!
 
 
-  Ord 0.18.2 Wallet databases are now stored in the /wallets subdirectory of the ord data directory. This update also includes other minor enhancements and bug fixes.
+  ⏳ If ord is currently indexing, it may take a few minutes to safely shut before updating. Please be patient during this process.
+
+
   Full release notes can be found at: https://github.com/ordinals/ord/releases
 developer: Casey Rodarmor
 website: https://ordinals.com/
