--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -19,7 +19,7 @@ releaseNotes: >-
   🚨 This update will automatically migrate existing wallet databases to the new ord 0.18.2 file structure. Simply update the app, and the rest is taken care of — no manual migration required!
 
 
-  ⏳ If ord is currently indexing, it may take a few minutes to safely shut before updating. Please be patient during this process.
+  ⏳ If ord is currently indexing, it may take a few minutes to safely shut down before updating. Please be patient during this process.
 
 
   Full release notes can be found at: https://github.com/ordinals/ord/releases
