add reference to additional gallery images

--- a/blockstream-blind-oracle/umbrel-app.yml
+++ b/blockstream-blind-oracle/umbrel-app.yml
@@ -26,6 +26,8 @@ support: https://t.me/blockstream_jade
 port: 3344
 gallery:
   - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ''
 deterministicPassword: false
 submitter: Blockstream
