update release notes

--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -39,24 +39,9 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  ⚠️ Due to a security fix in this update, all login sessions will be logged out after updating to this version. 
-  If you are using some unofficial/3rd party tools, you may need to re-generate an auth token.
+  This release updates Uptime Kuma from version 1.23.7 to 1.23.12 and includes various improvements, security fixes, and bug fixes.
   
 
-  This release updates Uptime Kuma of version 1.23.11
-
-
-  💇‍♀️ Improvements:
-  
-  - Update dependencies
-
-  🐛 Bug Fixes:
-
-  - Fix: origin undefined on error handling (Thanks @chakflying)
-
-  - [Non-docker] Fixed the Tailscale monitor issue which was broken in 1.23.8
-  
-
-  Full changelog for versions 1.23.7 to 1.23.11 can be found here: https://github.com/louislam/uptime-kuma/releases
+  Full release notes can be found at https://github.com/louislam/uptime-kuma/releases
 submitter: Philipp Haussleiter
 submission: https://github.com/getumbrel/umbrel/pull/1148
