--- a/morphos/docker-compose.yml
+++ b/morphos/docker-compose.yml
@@ -7,10 +7,6 @@ services:
       APP_PORT: 8080
 
   web:
-    image: ghcr.io/danvergara/morphos-server:0.2.0
+    image: ghcr.io/danvergara/morphos-server:0.3.0@sha256:b09a886b6ae1c2c3ab3911d0b3513b1a8c9953e80edeb942d33814700ebadfc7
     restart: on-failure
     stop_grace_period: 1m
-    ports:
-      - 8080:8080
-    volumes:
-      - ${APP_DATA_DIR}/tmp:/tmp
