--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -29,30 +29,9 @@ torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
 releaseNotes: >-
-  NEW:
-  
-  - Items added to a collection from the item context menu will now lock the collection field on the items
-
-  - Store track genres and add filtering options
-
-  - Support ID3v2.4 null-separated tags for genres and release type
-
-  - No longer create a view history entry for items marked as played
+  ⚠️ Please be patient during this update to version 1.40.2. Large libraries may take a while to update.
 
 
-  FIXES:
-
-  - Changing a ‘Other Videos’ type library to the modern movie agent would fail
-
-  - It is possible that agents are not initialised during startup on rare occasions
-
-  - Server could become unresponsive when collection membership changes
-
-  - When performing fix match on items from certain music libraries the language would default to Arabic
-
-  - and many more
- 
-
-  See full release notes here: https://www.videohelp.com/software/Plex
+  Full release notes are available at https://www.videohelp.com/software/Plex
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
