add release notes

--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -34,7 +34,11 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Jackett from version 0.21.1289 to 0.21.2163. The full release notes are available at https://github.com/Jackett/Jackett/releases.
+  This release updates Jackett from version 0.21.2163 to 0.21.2446.
+  It includes a fix for an issue where private/proxied indexers could not be used with companion apps like Sonarr and Radarr.
+  
+  
+  The full release notes are available at https://github.com/Jackett/Jackett/releases.
 permissions:
   - STORAGE_DOWNLOADS
 torOnly: false
