Added /config/media mount to UMBREL_DATA

--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -8,4 +8,5 @@ services:
     privileged: true
     volumes:
       - ${APP_DATA_DIR}/data:/config
+      - ${UMBREL_ROOT}/data/storage/homeassistant-media:/config/media # getumbrel/umbrel#1800
       - /dev:/dev
