--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/usr/src/paperless/data
       - ${APP_DATA_DIR}/media:/usr/src/paperless/media
-      - ${UMBREL_ROOT}/paperless/export:/usr/src/paperless/export
-      - ${UMBREL_ROOT}/paperless/consume:/usr/src/paperless/consume
+      - ${UMBREL_ROOT}/data/storage/paperless/export:/usr/src/paperless/export
+      - ${UMBREL_ROOT}/data/storage/paperless/consume:/usr/src/paperless/consume
     # env_file: docker-compose.env # NOPE, can't load files
     environment:
       PAPERLESS_REDIS: redis://broker:6379
