update release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -47,8 +47,25 @@ description: >-
 releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
+  
+  Highlights of this release include:
 
-  Full release notes for v1.101.0 are found at https://github.com/immich-app/immich/releases
+  - In-app language settings
+  
+  - Haptic feedback control
+  
+  - Enhanced UI/UX on the album list page
+  
+  - AV1 transcoding
+  
+  - Choose between WebP and JPEG for thumbnails and previews
+  
+  - Option to use embedded preview in RAW images
+  
+  - Option to fill the screen with slideshows view
+
+
+  Full release notes for v1.102.3 are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
