tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -65,7 +65,7 @@ releaseNotes: >-
   - Option to fill the screen with slideshows view
 
 
-  Full release notes for v1.102.3 are found at https://github.com/immich-app/immich/releases
+  Full release notes are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
