--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.102.3"
+version: "v1.103.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -63,6 +63,16 @@ releaseNotes: >-
   - Option to use embedded preview in RAW images
   
   - Option to fill the screen with slideshows view
+  
+  - Read-only album sharing permission
+  
+  - Permanent URL on the web for asset viewer
+  
+  - Jump-to-date from memory view on the mobile app
+  
+  - Action bar in memory view on the web
+  
+  - Improve geocoding location data
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
