tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,7 +45,7 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
+  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. Photos may take a while to load after the update.
 
   
   Highlights of this release include:
