--- a/yucca/umbrel-app.yml
+++ b/yucca/umbrel-app.yml
@@ -25,4 +25,4 @@ path: ""
 deterministicPassword: false
 dependencies: []
 submitter: jidckii
-# submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/1071
