--- a/affine/docker-compose.yml
+++ b/affine/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_PORT: 3010
 
   web:
-    image: ghcr.io/toeverything/affine-graphql:stable@sha256:47c4dcef7354c99a29b71fcabf2b5361eb87e7c25a5141ad0ddb3b550305fa0a
+    image: ghcr.io/toeverything/affine-graphql:stable-06890d6@sha256:e80b83a14f11cdaf5388d156cf4bfb1933c39fa8e3f85d7b2874ac4cec72e625
     restart: on-failure
     init: true
     command:
