remove icon and specific gallery images from manifest

--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -2,7 +2,6 @@ manifestVersion: 1
 id: affine
 name: Affine
 tagline: There can be more than Notion and Miro.
-icon: https://svgur.com/i/13qq.svg
 category: files
 version: "0.14.2"
 port: 3013
@@ -18,9 +17,9 @@ submission:
 repo: https://github.com/toeverything/AFFiNE
 support: https://docs.affine.pro
 gallery:
-  - https://i.imgur.com/8ArHQqM.png
-  - https://i.imgur.com/hFZCcOc.png
-  - https://i.imgur.com/5jXyq46.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes:
 dependencies: []
 path: ""
