--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
 developer: toeverything
 website: https://affine.pro
 submitter: Jasper
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/990
 repo: https://github.com/toeverything/AFFiNE
 support: https://docs.affine.pro
 gallery:
