--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -20,7 +20,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes:
+releaseNotes: ""
 dependencies: []
 path: ""
 defaultUsername: "admin@umbrel.local"
