tweak wording and add set up instructions

--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -1,15 +1,27 @@
 manifestVersion: 1
 id: affine
 name: Affine
-tagline: There can be more than Notion and Miro.
+tagline: Open Source Alternative to Notion, Miro, and Airtable
 category: files
 version: "0.14.2"
 port: 3013
 description: >-
-  AFFiNE is a next-gen knowledge base that brings planning, sorting and creating all together. 
+  A privacy-focused, local-first, open-source, and ready-to-use alternative for Notion & Miro.
+  One hyper-fused platform for wildly creative minds.
+
+  🛠️ SET-UP INSTRUCTIONS
+
+  In order to save your data, you need to sign in to your self-hosted Affine instance:
 
 
-  Privacy first, open-source, customizable and ready to use.
+  1. In the Affine app, open the workspace list view and tap the "Sign up / Sign in" Button.
+
+
+  2. Enter your credentials that are provided when you installed the app. To find these again, right-click on the Affine app icon
+  on the umbrelOS homescreen and select "Show default credentials".
+
+
+  3. Switch to the Cloud sync Workspace. You are now ready to use Affine with your self-hosted instance!
 developer: toeverything
 website: https://affine.pro
 submitter: Jasper
