re-word instructions for new 0.14 onboarding

--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -15,14 +15,14 @@ description: >-
   In order to save your data, you need to sign in to your self-hosted Affine instance:
 
 
-  1. In the Affine app, open the workspace list view and tap the "Sign up / Sign in" Button.
+  1. In the Affine app select the "Sign up/ Sign in" to sync with your self-hosted instance.
 
 
-  2. Enter your credentials that are provided when you installed the app. To find these again, right-click on the Affine app icon
+  2. Enter the email and password credentials that are provided when you installed the app. To find these again, right-click on the Affine app icon
   on the umbrelOS homescreen and select "Show default credentials".
 
 
-  3. Switch to the Cloud sync Workspace. You are now ready to use Affine with your self-hosted instance!
+  3. Follow the steps to create your self-hosted cloud workspace. You are now ready to use Affine with your self-hosted instance!
 developer: toeverything
 website: https://affine.pro
 submitter: Jasper
