--- a/pocketbase/umbrel-app.yml
+++ b/pocketbase/umbrel-app.yml
@@ -26,7 +26,8 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/TODO
 repo: https://github.com/pocketbase/pocketbase
 support: https://github.com/pocketbase/pocketbase/discussions
 gallery:
-  - 1.jpg
-  - 2.jpg
-  - 3.jpg
+  - 1.png
+  - 2.png
+  - 3.png
+  - 4.png
 path: /_/
