--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -25,49 +25,15 @@ description: >-
   🔒 Respect data privacy
 
   Umami lets you gather the data you need while respecting the privacy of your users. All data is anonymized and no personal data is ever collected. Cookie banners not required.
-
-# The developer of the app. This is not necessarily the submitter but the actual developer of the app.
-developer: John Doe
-
-# The website of the app. This should be the official website of the app.
-website: http://example.com
-
-# The submitter of the app. This is the person who submits the app to the App Store (probably you).
-submitter: Jane Doe
-
-# The submission URL. This should be a link to the pull request or the commit that adds the app to the App Store.
+developer: Umami
+website: https://umami.is
+submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
-
-# The repository of the app. This should be a link to the repository of the app. (optional)
-#repo: https://github.com/<user>/<repo>
-
-# The support URL. This should be a link to the support page of the app.
-support: https://github.com/<user>/<repo>/discussions
-
-# The gallery is an array of filenames (Official App Store) or URLs (Community App Stores) to images that will be shown in the App Store.
-# Ideally the size of the images should be 2280x1800 (1.6:1) pixels.
+repo: https://github.com/umami-software/umami
+support: https://github.com/umami-software/umami/discussions
 gallery:
   - 1.jpg
   - 2.jpg
-
-# The release notes of the app. This should be a string that describes the changes in the new version. (optional)
-# Note: To separate paragraphs, use two empty lines instead of only one.
-#releaseNotes: >-
-#  This is a new version of the app.
-#  
-#  
-#  It has some new features and some bug fixes.
-
-# The dependencies of the app. This should be an array of IDs of apps that this app depends on. (optional)
-# This gives Umbrel a list of app IDs that must be already installed in order for the user to install this app and also function.
-#dependencies: []
-
-# The permissions of the app. This should be an array of permissions that the app requires. (optional)
-# Available permissions are: 
-# - STORAGE_DOWNLOADS: Allows the app to download files to the storage.
-#permissions: []
-
-# If the app is only accessible via a subpath, you can specify it here. (optional)
 #path: /web
 
 # If the user needs to know about a default username and password, you can specify it here. (optional)
